Fixing alignment issues for button filtering

--- a/main.css
+++ b/main.css
@@ -56,6 +56,10 @@ html, body {
   padding-bottom: 1rem;
 }
 
+.carousel-background {
+  height: 1000px;
+}
+
 .btn-primary {
   background-color: #3C7F7B;
   border: 1px solid #3C7F7B;
